# decksy

backend/: Makefile  pyproject.toml
backend/app/: main.py
backend/app/models/: slide_content.py
